--- a/s.css
+++ b/s.css
@@ -242,4 +242,11 @@ section{
 		width: auto;
 		font-size: 16px;
 	}
+	main{
+		float:none;
+	}
+	body{
+		display: block;
+		-webkit-overflow-scrolling: touch;
+	}
 }
