fix scroll and padding

--- a/s.css
+++ b/s.css
@@ -242,7 +242,7 @@ section{
 		width: auto;
 		font-size: 16px;
 	}
-	body{
+	main{
 		display: block;
 		padding-bottom: 40px;
 		padding-top: 40px;
