--- a/s.css
+++ b/s.css
@@ -242,9 +242,11 @@ section{
 		width: auto;
 		font-size: 16px;
 	}
+	body{
+		-webkit-overflow-scrolling: touch;
+	}
 	main{
-		display: block;
-		padding-bottom: 40px;
-		padding-top: 40px;
+		padding-bottom: 60px;
+		padding-top: 60px;
 	}
 }
